--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "clickygame",
   "version": "0.1.0",
+  "homepage": "https://wynnc.github.io/clickyGame",
   "private": true,
   "dependencies": {
     "file-loader": "^4.2.0",
@@ -32,6 +33,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "homepage": "https://wynnc.github.io/clickyGame"
+  }
 }
